# ctemplate

./: .gitmodules  CMakeLists.txt  FindCTemplate.cmake  FindCtemplate.cmake  GNUmakefile  Makefile  Makefile.am  README.md  alternate-clike-syntax.md  configure.ac  ctemplate.cmake  generate_dest_directory.cmake  test.c_in_c.c  test.code-in-string.c  test.derp  test.template.html
m4/: add_gcc_opt.m4
src/: c_generate.c  c_generate.h  c_generate_main.c  die.c  example.c  example2.c  generate.c  generate.h  generate_main.c  internal_output.c  internal_output.h  output.h  paren_search.snippet.h  processing_types.list
src/clike/: for_parens.snippet.h  for_tokens.snippet.h  parens.snippet.h  parse.c
