AC_PREREQ([2.69])
AC_INIT([ctemplate], [1.0], [whatever])
AC_CONFIG_SRCDIR([src/generate.h])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR(m4)
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE
LT_INIT
# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_FUNC_REALLOC

ADD_GCC_OPTIMIZATION

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
